--- a/config/ompl_planning.yaml
+++ b/config/ompl_planning.yaml
@@ -51,7 +51,7 @@ left_arm:
     - PRMstarkConfigDefault
   projection_evaluator: joints(left_arm_0_joint,left_arm_1_joint)
   longest_valid_segment_fraction: 0.05
-right_sdh:
+right_kinect:
   planner_configs:
     - SBLkConfigDefault
     - ESTkConfigDefault
@@ -64,9 +64,7 @@ right_sdh:
     - TRRTkConfigDefault
     - PRMkConfigDefault
     - PRMstarkConfigDefault
-  projection_evaluator: joints(right_sdh_finger_22_joint,right_sdh_finger_23_joint)
-  longest_valid_segment_fraction: 0.05
-left_sdh:
+left_plate:
   planner_configs:
     - SBLkConfigDefault
     - ESTkConfigDefault
@@ -79,8 +77,6 @@ left_sdh:
     - TRRTkConfigDefault
     - PRMkConfigDefault
     - PRMstarkConfigDefault
-  projection_evaluator: joints(left_sdh_finger_22_joint,left_sdh_finger_23_joint)
-  longest_valid_segment_fraction: 0.05
 both_arms:
   planner_configs:
     - SBLkConfigDefault
