--- a/config/ompl_planning.yaml
+++ b/config/ompl_planning.yaml
@@ -64,19 +64,6 @@ left_sdh:
     - TRRTkConfigDefault
     - PRMkConfigDefault
     - PRMstarkConfigDefault
-right_sdh:
-  planner_configs:
-    - SBLkConfigDefault
-    - ESTkConfigDefault
-    - LBKPIECEkConfigDefault
-    - BKPIECEkConfigDefault
-    - KPIECEkConfigDefault
-    - RRTkConfigDefault
-    - RRTConnectkConfigDefault
-    - RRTstarkConfigDefault
-    - TRRTkConfigDefault
-    - PRMkConfigDefault
-    - PRMstarkConfigDefault
 both_arms:
   planner_configs:
     - SBLkConfigDefault
@@ -92,3 +79,16 @@ both_arms:
     - PRMstarkConfigDefault
   projection_evaluator: joints(left_arm_0_joint,left_arm_1_joint)
   longest_valid_segment_fraction: 0.05
+right_dummy:
+  planner_configs:
+    - SBLkConfigDefault
+    - ESTkConfigDefault
+    - LBKPIECEkConfigDefault
+    - BKPIECEkConfigDefault
+    - KPIECEkConfigDefault
+    - RRTkConfigDefault
+    - RRTConnectkConfigDefault
+    - RRTstarkConfigDefault
+    - TRRTkConfigDefault
+    - PRMkConfigDefault
+    - PRMstarkConfigDefault
