--- a/config/fake_controllers.yaml
+++ b/config/fake_controllers.yaml
@@ -8,6 +8,13 @@ controller_list:
       - left_arm_4_joint
       - left_arm_5_joint
       - left_arm_6_joint
+      - left_sdh_finger_22_joint
+      - left_sdh_finger_23_joint
+      - left_sdh_knuckle_joint
+      - left_sdh_finger_12_joint
+      - left_sdh_finger_13_joint
+      - left_sdh_thumb_2_joint
+      - left_sdh_thumb_3_joint
   - name: fake_right_arm_controller
     joints:
       - right_arm_0_joint
@@ -17,6 +24,13 @@ controller_list:
       - right_arm_4_joint
       - right_arm_5_joint
       - right_arm_6_joint
+      - right_sdh_finger_22_joint
+      - right_sdh_finger_23_joint
+      - right_sdh_knuckle_joint
+      - right_sdh_finger_12_joint
+      - right_sdh_finger_13_joint
+      - right_sdh_thumb_2_joint
+      - right_sdh_thumb_3_joint
   - name: fake_left_sdh_controller
     joints:
       - left_sdh_finger_22_joint
@@ -44,6 +58,13 @@ controller_list:
       - left_arm_4_joint
       - left_arm_5_joint
       - left_arm_6_joint
+      - left_sdh_finger_22_joint
+      - left_sdh_finger_23_joint
+      - left_sdh_knuckle_joint
+      - left_sdh_finger_12_joint
+      - left_sdh_finger_13_joint
+      - left_sdh_thumb_2_joint
+      - left_sdh_thumb_3_joint
       - right_arm_0_joint
       - right_arm_1_joint
       - right_arm_2_joint
@@ -51,3 +72,19 @@ controller_list:
       - right_arm_4_joint
       - right_arm_5_joint
       - right_arm_6_joint
+      - right_sdh_finger_22_joint
+      - right_sdh_finger_23_joint
+      - right_sdh_knuckle_joint
+      - right_sdh_finger_12_joint
+      - right_sdh_finger_13_joint
+      - right_sdh_thumb_2_joint
+      - right_sdh_thumb_3_joint
+  - name: fake_kit_head_controller
+    joints:
+      - head_neck_pitch_joint
+      - head_neck_roll_joint
+      - head_neck_yaw_joint
+      - head_head_tilt_joint
+      - head_eyes_tilt_joint
+      - head_left_eye_joint
+      - head_right_eye_joint
