--- a/config/joint_limits.yaml
+++ b/config/joint_limits.yaml
@@ -1,35 +1,15 @@
 joint_limits:
-  right_sdh_finger_23_joint:
-    has_velocity_limits: true
-    max_velocity: 5
-    has_acceleration_limits: false
-    max_acceleration: 0
-  left_sdh_thumb_2_joint:
-    has_velocity_limits: true
-    max_velocity: 5
-    has_acceleration_limits: false
-    max_acceleration: 0
-  left_arm_6_joint:
-    has_velocity_limits: true
-    max_velocity: 0.314159265359
-    has_acceleration_limits: false
-    max_acceleration: 0
-  left_arm_4_joint:
-    has_velocity_limits: true
-    max_velocity: 0.226892802759
-    has_acceleration_limits: false
-    max_acceleration: 0
-  right_arm_3_joint:
-    has_velocity_limits: true
-    max_velocity: 0.226892802759
-    has_acceleration_limits: false
-    max_acceleration: 0
-  right_arm_2_joint:
-    has_velocity_limits: true
-    max_velocity: 0.226892802759
-    has_acceleration_limits: false
-    max_acceleration: 0
   right_sdh_thumb_3_joint:
+    has_velocity_limits: true
+    max_velocity: 5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  left_sdh_finger_22_joint:
+    has_velocity_limits: true
+    max_velocity: 5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  right_sdh_finger_13_joint:
     has_velocity_limits: true
     max_velocity: 5
     has_acceleration_limits: false
@@ -39,7 +19,7 @@ joint_limits:
     max_velocity: 0.314159265359
     has_acceleration_limits: false
     max_acceleration: 0
-  right_sdh_finger_13_joint:
+  right_sdh_thumb_2_joint:
     has_velocity_limits: true
     max_velocity: 5
     has_acceleration_limits: false
@@ -49,12 +29,57 @@ joint_limits:
     max_velocity: 0.226892802759
     has_acceleration_limits: false
     max_acceleration: 0
-  left_arm_3_joint:
+  right_sdh_finger_22_joint:
+    has_velocity_limits: true
+    max_velocity: 5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  right_arm_2_joint:
     has_velocity_limits: true
     max_velocity: 0.226892802759
     has_acceleration_limits: false
     max_acceleration: 0
-  right_sdh_finger_12_joint:
+  right_arm_0_joint:
+    has_velocity_limits: true
+    max_velocity: 0.191986217719
+    has_acceleration_limits: false
+    max_acceleration: 0
+  head_head_tilt_joint:
+    has_velocity_limits: true
+    max_velocity: 3.14159265359
+    has_acceleration_limits: false
+    max_acceleration: 0
+  head_eyes_tilt_joint:
+    has_velocity_limits: true
+    max_velocity: 3.14159265359
+    has_acceleration_limits: false
+    max_acceleration: 0
+  head_left_eye_joint:
+    has_velocity_limits: true
+    max_velocity: 3.14159265359
+    has_acceleration_limits: false
+    max_acceleration: 0
+  head_right_eye_joint:
+    has_velocity_limits: true
+    max_velocity: 3.14159265359
+    has_acceleration_limits: false
+    max_acceleration: 0
+  left_arm_0_joint:
+    has_velocity_limits: true
+    max_velocity: 0.191986217719
+    has_acceleration_limits: false
+    max_acceleration: 0
+  left_arm_6_joint:
+    has_velocity_limits: true
+    max_velocity: 0.314159265359
+    has_acceleration_limits: false
+    max_acceleration: 0
+  left_sdh_finger_13_joint:
+    has_velocity_limits: true
+    max_velocity: 5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  right_sdh_knuckle_joint:
     has_velocity_limits: true
     max_velocity: 5
     has_acceleration_limits: false
@@ -64,22 +89,17 @@ joint_limits:
     max_velocity: 5
     has_acceleration_limits: false
     max_acceleration: 0
-  left_arm_5_joint:
+  right_arm_1_joint:
     has_velocity_limits: true
-    max_velocity: 0.314159265359
-    has_acceleration_limits: false
-    max_acceleration: 0
-  left_sdh_finger_22_joint:
-    has_velocity_limits: true
-    max_velocity: 5
-    has_acceleration_limits: false
-    max_acceleration: 0
-  left_sdh_knuckle_joint:
-    has_velocity_limits: true
-    max_velocity: 5
+    max_velocity: 0.191986217719
     has_acceleration_limits: false
     max_acceleration: 0
   left_sdh_thumb_3_joint:
+    has_velocity_limits: true
+    max_velocity: 5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  right_sdh_finger_23_joint:
     has_velocity_limits: true
     max_velocity: 5
     has_acceleration_limits: false
@@ -89,19 +109,24 @@ joint_limits:
     max_velocity: 0.314159265359
     has_acceleration_limits: false
     max_acceleration: 0
-  right_sdh_finger_21_joint:
-    has_velocity_limits: true
-    max_velocity: 5
-    has_acceleration_limits: false
-    max_acceleration: 0
-  right_sdh_finger_22_joint:
-    has_velocity_limits: true
-    max_velocity: 5
-    has_acceleration_limits: false
-    max_acceleration: 0
   left_sdh_finger_21_joint:
     has_velocity_limits: true
     max_velocity: 5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  head_neck_pitch_joint:
+    has_velocity_limits: true
+    max_velocity: 3.14159265359
+    has_acceleration_limits: false
+    max_acceleration: 0
+  head_neck_roll_joint:
+    has_velocity_limits: true
+    max_velocity: 3.14159265359
+    has_acceleration_limits: false
+    max_acceleration: 0
+  head_neck_yaw_joint:
+    has_velocity_limits: true
+    max_velocity: 3.14159265359
     has_acceleration_limits: false
     max_acceleration: 0
   left_sdh_finger_23_joint:
@@ -109,14 +134,19 @@ joint_limits:
     max_velocity: 5
     has_acceleration_limits: false
     max_acceleration: 0
-  left_sdh_finger_13_joint:
+  left_sdh_thumb_2_joint:
     has_velocity_limits: true
     max_velocity: 5
     has_acceleration_limits: false
     max_acceleration: 0
-  left_arm_0_joint:
+  right_sdh_finger_21_joint:
     has_velocity_limits: true
-    max_velocity: 0.191986217719
+    max_velocity: 5
+    has_acceleration_limits: false
+    max_acceleration: 0
+  right_sdh_finger_12_joint:
+    has_velocity_limits: true
+    max_velocity: 5
     has_acceleration_limits: false
     max_acceleration: 0
   left_arm_1_joint:
@@ -129,23 +159,28 @@ joint_limits:
     max_velocity: 0.226892802759
     has_acceleration_limits: false
     max_acceleration: 0
-  right_sdh_thumb_2_joint:
+  left_arm_3_joint:
+    has_velocity_limits: true
+    max_velocity: 0.226892802759
+    has_acceleration_limits: false
+    max_acceleration: 0
+  left_arm_4_joint:
+    has_velocity_limits: true
+    max_velocity: 0.226892802759
+    has_acceleration_limits: false
+    max_acceleration: 0
+  left_arm_5_joint:
+    has_velocity_limits: true
+    max_velocity: 0.314159265359
+    has_acceleration_limits: false
+    max_acceleration: 0
+  right_arm_3_joint:
+    has_velocity_limits: true
+    max_velocity: 0.226892802759
+    has_acceleration_limits: false
+    max_acceleration: 0
+  left_sdh_knuckle_joint:
     has_velocity_limits: true
     max_velocity: 5
-    has_acceleration_limits: false
-    max_acceleration: 0
-  right_arm_1_joint:
-    has_velocity_limits: true
-    max_velocity: 0.191986217719
-    has_acceleration_limits: false
-    max_acceleration: 0
-  right_sdh_knuckle_joint:
-    has_velocity_limits: true
-    max_velocity: 5
-    has_acceleration_limits: false
-    max_acceleration: 0
-  right_arm_0_joint:
-    has_velocity_limits: true
-    max_velocity: 0.191986217719
     has_acceleration_limits: false
     max_acceleration: 0
