--- a/config/ompl_planning.yaml
+++ b/config/ompl_planning.yaml
@@ -92,3 +92,16 @@ both_arms:
     - PRMstarkConfigDefault
   projection_evaluator: joints(left_arm_0_joint,left_arm_1_joint)
   longest_valid_segment_fraction: 0.05
+kit_head:
+  planner_configs:
+    - SBLkConfigDefault
+    - ESTkConfigDefault
+    - LBKPIECEkConfigDefault
+    - BKPIECEkConfigDefault
+    - KPIECEkConfigDefault
+    - RRTkConfigDefault
+    - RRTConnectkConfigDefault
+    - RRTstarkConfigDefault
+    - TRRTkConfigDefault
+    - PRMkConfigDefault
+    - PRMstarkConfigDefault
